[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web3-utils"
version = "0.1.0"
description = "Web3 utilities for Ethereum interactions"
requires-python = ">=3.9"
dependencies = [
    "web3>=6.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web3_utils = ["*.json"]
